# elinity-backend-p1

./: .dockerignore  .gcloudignore  .gitignore  API_INTEGRATION_DOCS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  ELINITY_FINAL_BACKUP.sql  FINAL_CORE_OUTPUTS.json  FINAL_VERIFICATION_REPORT.txt  FRONTEND_DEPLOYMENT_PLAN.md  HOSTINGER_ISSUE_REPORT.txt  LICENSE  README.md  Recommendation.md  SECURITY.md  TODO  celery_beat.sh  celery_flower.sh  celery_worker.sh  dashboard.sh  debug_routes.json  digitalocean_launch.sh  docker-compose.local-test.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  entryPoint.sh  env.h  gcp_launch.sh  hostinger_launch.sh  local_test.sh  main.py  null  pyproject.toml  quick_deploy.sh  requirements.txt  server_log.txt  server_out.txt  settings.py  (+2 more)
3waychat/: Chatbot.md  Journaling.md  NLS.md
alembic/: env.py
auth/: service_key_checker.py
core/: limiter.py  logging.py  universal_prompt.py  universal_prompt_evaluation.py  universal_prompt_selfgrowth.py  universal_prompt_social.py
dashboard/: README.md
data/: game_registry.json  relationship_skills.json  sample.py  self_growth_skills.json  social_skills.json
database/: __init__.py  deep_user_persona_model.py  rich_user_profile.py  session.py
docs/: README.md  USER_FLOW.md  questions_cards.py
frontend/: apiClient.ts
game-ui/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
middleware/: auth_middleware.py
models/: __Init__.py  activity.py  blogs.py  chat.py  connection.py  conversation.py  credits.py  evaluation.py  game_session.py  journal.py  lifebook.py  notifications.py  (+6 more)
(+405 files in other folders)
